--- a/0.Project Description.md
+++ b/0.Project Description.md
@@ -2,4 +2,5 @@
 This is a group project done for a database course where we were instructed to design and implement a database for a company in our area as if we were employees.
 We chose to design a database for the company Lit Pizza. 
 It took around 8 - 10 hours of meetings to complete (partially due to confusion on the requirements of the project) and was a good learning experience.
-The steps of the project are listed in numerical order.
+The steps of the project are listed in numerical order. 
+The complete sql file is complete.sql and the other .sql files are the tables, the insert statements, and the queries.
